--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+    *{
+        @apply box-border;
+    }
+    body {
+        /* @apply text-2xl; */
+        @apply m-0;
+        @apply font-serif;
+        @apply text-lg;
+    }
+    a {
+        @apply decoration-0;
+    }
+}
