--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,10 @@
     *{
         @apply box-border;
     }
+
+    html{
+        @apply text-base;
+    }
     body {
         /* @apply text-2xl; */
         @apply m-0;
